add correct path files

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ input:focus {
 
 
 	<div class="header" style="height:220px" >
-        <img src="/images/vinay_photo.jpg" class="img-rounded" height="210" width="190" alt="vinay_profile image" style="float: left; ">     
+        <img src="images/vinay_photo.jpg" class="img-rounded" height="210" width="190" alt="vinay_profile image" style="float: left; ">     
         <!-- <a href="C:\Users\vinay\OneDrive\Documents\vinay_photo.jpg">vinay_photo</a> -->
 	  <p><b><h1>Kale Vinay </h1><h2><i>I am passionate about leveraging my skills to drive impactful solutions and am dedicated to developing cutting-edge applications.</i></h2></p>
 	</div>
@@ -306,11 +306,11 @@ input:focus {
                   </div>   -->
      
                    <div class="list-group">  
-                    <a href=\ class="list-group-item list-group-item-action">Education</a>  
-                    <a href="C:\web_development_company\Licenses & certifications.html" class="list-group-item list-group-item-success">Licenses & certifications</a>  
-                    <a href="C:\web_development_company\portfolio_projects.html" class="list-group-item list-group-item-secondary">Projects</a>  
-                    <a href="C:\web_development_company\portfolio_skills.html" class="list-group-item list-group-item-info">Skills</a>  
-                    <a href="C:\web_development_company\Honors & awards.html" class="list-group-item list-group-item-warning">Honors & awards</a>  
+                    <a href="/education.html" class="list-group-item list-group-item-action">Education</a>  
+                    <a href="/Licenses & certifications.html"list-group-item list-group-item-success">Licenses & certifications</a>  
+                    <a href="/portfolio_projects.html" class="list-group-item list-group-item-secondary">Projects</a>  
+                    <a href="/portfolio_skills.html" class="list-group-item list-group-item-info">Skills</a>  
+                    <a href="/Honors & awards.html" class="list-group-item list-group-item-warning">Honors & awards</a>  
                   </div>  
 
 
