--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ input:focus {
      
                    <div class="list-group">  
                     <a href="/education.html" class="list-group-item list-group-item-action">Education</a>  
-                    <a href="/Licenses & certifications.html"list-group-item list-group-item-success">Licenses & certifications</a>  
+                    <a href="/Licenses & certifications.html"class="list-group-item list-group-item-success">Licenses & certifications</a>  
                     <a href="/portfolio_projects.html" class="list-group-item list-group-item-secondary">Projects</a>  
                     <a href="/portfolio_skills.html" class="list-group-item list-group-item-info">Skills</a>  
                     <a href="/Honors & awards.html" class="list-group-item list-group-item-warning">Honors & awards</a>  
