--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ input:focus {
 
 
 	<div class="header" style="height:220px" >
-        <img src="images/vinay_photo.jpg" class="img-rounded" height="210" width="190" alt="vinay_profile image" style="float: left; ">     
+        <img src="/images/vinay_photo.jpg" class="img-rounded" height="210" width="190" alt="vinay_profile image" style="float: left; ">     
         <!-- <a href="C:\Users\vinay\OneDrive\Documents\vinay_photo.jpg">vinay_photo</a> -->
 	  <p><b><h1>Kale Vinay </h1><h2><i>I am passionate about leveraging my skills to drive impactful solutions and am dedicated to developing cutting-edge applications.</i></h2></p>
 	</div>
