--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 	<title>Webpage using div</title>
@@ -386,6 +386,202 @@ input:focus {
  
  
 
+</body>
+</html>
+
+ 
+ -->
+
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Webpage using div</title>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>  
+	<script>   
+	$(document).ready(function(){  
+	    $("#flip").click(function(){  
+	        $("#panel").slideToggle("fast");  
+	    });  
+	});  
+	</script>  
+
+	<style>
+		* {  
+		  margin: 0;  
+		  padding: 0;  
+		  box-sizing: border-box;  
+		}  
+		body {  
+		  display: flex;  
+		  flex-direction: column;
+		  justify-content: center;  
+		  align-items: center;  
+		  font-family: 'Titillium Web', sans-serif;  
+		  background: linear-gradient(125deg, #778beb, #f8a5c2);  
+		  min-height: 100vh;  
+		  padding: 20px;
+		}
+		.vinay {
+		  background:linear-gradient(125deg, #22cf76, #f8a5c2); 
+		  text-align: center;
+		  width: 100%;
+		}
+		.vinay h1 {
+		  padding: 10px;
+		  color: rgb(157, 25, 75); 
+		}
+		.header {
+		  padding: 10px;
+		  background-color:linear-gradient(125deg, #778beb, #f8a5c2); 
+		  text-align: center;
+		  display: flex;
+		  flex-direction: column;
+		  align-items: center;
+		  width: 100%;
+		}
+		.header h1, .header h2 {
+		  color: rgb(157, 25, 75);
+		}
+		.header img {
+		  max-width: 100%;
+		  height: auto;
+		  border-radius: 50%;
+		}
+		.kale h1, .kale1 p {
+		  color: rgb(157, 25, 75);
+		  text-align: center;
+		}
+		.nav {
+		  background-color:linear-gradient(125deg, #778beb, #f8a5c2); 
+		  padding: 5px;
+		  text-align: center;
+		  width: 100%;
+		}
+		.nav li {
+		  list-style: none;
+		  display: inline-block;
+		  padding: 8px;
+		}
+		.nav a {
+		  color: rgb(157, 25, 75);
+		  text-decoration: none;
+		}
+		.nav ul li a:hover {
+		  text-decoration: underline;
+		  color: #7fffd4;
+		}
+		#panel, #flip {
+		  padding: 5px;  
+		  text-align: center;  
+		  background-color:linear-gradient(125deg, #778beb, #f8a5c2); 
+		}
+		#panel {
+		  padding: 50px;  
+		  display: none;  
+		}
+		.list-group {
+		  width: 100%;
+		  max-width: 560px;
+		  margin: 0 auto;
+		}
+		.list-group a {
+		  display: block;
+		  padding: 10px;
+		  margin: 5px 0;
+		  text-align: center;
+		  text-decoration: none;
+		  color: white;
+		  border-radius: 5px;
+		}
+		.list-group-item-action { background-color: #778beb; }
+		.list-group-item-success { background-color: #28a745; }
+		.list-group-item-secondary { background-color: #6c757d; }
+		.list-group-item-info { background-color: #17a2b8; }
+		.list-group-item-warning { background-color: #ffc107; }
+
+		.footer {
+		  height: 44px;
+		  background-color: #455e64; 
+		  text-align: center; 
+		  padding-top: 10px;
+		  width: 100%;
+		}
+		.footer p {
+		  color: #8fbc8f;
+		}
+
+		@media (min-width: 768px) {
+		  .header {
+		    flex-direction: row;
+		  }
+		  .header img {
+		    margin-right: 20px;
+		  }
+		}
+
+		@media (max-width: 767px) {
+		  .header img {
+		    width: 100px;
+		    height: auto;
+		  }
+		}
+	</style>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">  
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+</head>
+<body>
+<div>
+	<div class="vinay">
+	    <h1><b>Portfolio Website</b></h1>
+	</div>
+
+	<div class="header">
+	    <img src="/portfolio_website/images/vinay_photo.jpg" class="img-rounded" height="210" width="190" alt="vinay_profile image">     
+	    <div>
+	        <h1>Kale Vinay</h1>
+	        <h2><i>I am passionate about leveraging my skills to drive impactful solutions and am dedicated to developing cutting-edge applications.</i></h2>
+	    </div>
+	</div>
+
+	<!-- Nav -->
+	<div class="nav">
+	    <ul>
+	        <li><a href="https://github.com/KALE-VINAY"><h3><i><b>Git-hub</b></i></h3></a></li>
+	        <li><a href="https://www.linkedin.com/in/kale-vinay-8435901bb/"><h3><i><b>Linkedin</b></i></h3></a></li>
+	    </ul>
+	</div>
+
+	<div class="kale" id="flip">
+	    <h1><span class="glyphicon glyphicon-hand-right"></span><b><i>click here to know about me</i></b> <span class="glyphicon glyphicon-hand-left"></span></h1>
+	</div>  
+	<div class="kale1" id="panel">
+	    <p><b><i>Hi, I'm a recent graduate with a Bachelor of Technology (B.Tech) in Electronics and Communications Engineering from Tezpur University, India. I have completed electives in Statistics, Fuzzy Logic, and Neural Networks, maintaining a CGPA of 6.72. I am passionate about leveraging my skills to drive impactful solutions and am dedicated to developing cutting-edge applications. I have cultivated a robust skill set in Python, C++, MySQL, data analytics, and image processing using MATLAB. Additionally, I am proficient in Java, problem-solving, machine learning, Arduino, HTML, CSS, jQuery, Bootstrap, and JavaScript.</i></b></p>
+	</div>
+
+	<!-- main -->
+	<div style="height:440px">
+	    <div>
+	        <div class="list-group">  
+	            <a href="/portfolio_website/education.html" class="list-group-item list-group-item-action">Education</a>  
+	            <a href="/portfolio_website/licenses_certifications.html" class="list-group-item list-group-item-success">Licenses & certifications</a>  
+	            <a href="/portfolio_website/portfolio_projects.html" class="list-group-item list-group-item-secondary">Projects</a>  
+	            <a href="/portfolio_website/portfolio_skills.html" class="list-group-item list-group-item-info">Skills</a>  
+	            <a href="/portfolio_website/honors_awards.html" class="list-group-item list-group-item-warning">Honors & awards</a>  
+	        </div>
+	    </div>
+	</div>
+
+	<!-- footer -->
+	<div class="footer">
+	    <p><strong>Thank you</strong></p>
+	</div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>  
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>  
 </body>
 </html>
 
